prototype/frameworks/openweb-ui/openshift-deploy/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      serviceAccountName: open-webui
      containers:
        - name: ollama
          image: ollama/ollama:latest
          ports:
          - containerPort: 11434
          resources: {}
          #  requests:
          #    cpu: "16"
          #    memory: "50Gi"
          #  limits:
          #    cpu: "32"
          #    memory: "100Gi"
          #    nvidia.com/gpu: "0"
          volumeMounts:
          - name: ollama-data
            mountPath: /app/.ollama
          tty: true
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:main
          ports:
            - containerPort: 8080
          resources: {}
          #  requests:
          #    cpu: "16"
          #    memory: "50Gi"
          #  limits:
          #    cpu: "32"
          #    memory: "100Gi"
          #    nvidia.com/gpu: "0"
          volumeMounts:
            - name: ollama-data
              mountPath: /app/.ollama
            - name: openwebui-data
              mountPath: /app/backend/data
      volumes:
        - name: ollama-data
          persistentVolumeClaim:
            claimName: ollama-pvc
        - name: openwebui-data
          persistentVolumeClaim:
            claimName: open-webui-pvc
