prototype/frameworks/openweb-ui/openshift-deploy/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
spec:
  selector:
    app: open-webui
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 8080
    - name: ollama
      protocol: TCP
      port: 11434
      targetPort: 11434
