prototype/frameworks/openweb-ui/openshift-deploy/resources/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: open-webui
spec:
  to:
    kind: Service
    name: open-webui
  port:
    targetPort: http
  tls:
    termination: edge
